<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/beige">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="9.5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/company_adapter_llc"
                android:layout_width="105dp"
                android:layout_height="80dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="9.5dp"
                android:background="@color/soft_green"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/company_adapter_txv_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_E1"
                    android:textColor="@color/white"
                    android:textSize="38.5sp"
                    android:textStyle="bold"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="@id/company_adapter_llc"
                    app:layout_constraintEnd_toEndOf="@id/company_adapter_llc"
                    app:layout_constraintStart_toStartOf="@id/company_adapter_llc"
                    app:layout_constraintTop_toTopOf="@id/company_adapter_llc" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/company_adapter_txv_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:gravity="start"
                android:text="@string/label_company1"
                android:textColor="@color/dark_indigo"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/company_adapter_llc"
                app:layout_constraintTop_toTopOf="@id/company_adapter_llc" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/company_adapter_txv_business"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.5dp"
                android:gravity="start"
                android:text="@string/label_business"
                android:textColor="@color/warm_grey"
                android:textSize="17sp"
                android:textStyle="italic"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/company_adapter_txv_company"
                app:layout_constraintTop_toBottomOf="@id/company_adapter_txv_company" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/company_adapter_txv_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4.5dp"
                android:layout_marginBottom="5dp"
                android:gravity="start"
                android:text="@string/label_country"
                android:textColor="@color/warm_grey"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/company_adapter_txv_company"
                app:layout_constraintTop_toBottomOf="@id/company_adapter_txv_business"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>